python-txaio (20.4.1-2pexip3) pexip; urgency=medium

  * Initial bullseye build

 -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:51 +0100

python-txaio (20.4.1-2pexip2) pexip; urgency=medium

  * Rebuild to move package to main.

 -- Mark Hymers <mark.hymers@pexip.com>  Thu, 07 Apr 2022 08:06:53 +0000

python-txaio (20.4.1-2pexip1) pexip; urgency=medium

  * Prepare Pexip packaging

 -- Huw Jones <huw@pexip.com>  Mon, 14 Jun 2021 11:16:20 +0000

python-txaio (20.4.1-2) unstable; urgency=medium

  * Uploading to unstable.
  * Removed excess override.

 -- Thomas Goirand <zigo@debian.org>  Fri, 08 May 2020 12:03:13 +0200

python-txaio (20.4.1-1) experimental; urgency=medium

  * New upstream release.
  * Rebased remove-privacy-breach-in-docs.patch.
  * Removed fix-await-is-a-keyword.patch (applied upstream).

 -- Thomas Goirand <zigo@debian.org>  Tue, 07 Apr 2020 13:45:00 +0200

python-txaio (2.10.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Use debhelper-compat instead of debian/compat.

  [ Sandro Tosi ]
  * Drop python2 support; Closes: #938232

 -- Sandro Tosi <morph@debian.org>  Sat, 04 Jan 2020 22:06:13 -0500

python-txaio (2.10.0-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/control: Set Vcs-* to salsa.debian.org
  * d/control: Add trailing tilde to min version depend to allow
    backports
  * d/control: Use team+openstack@tracker.debian.org as maintainer

  [ Thomas Goirand ]
  * New upstream release.
  * Add fix-await-is-a-keyword.patch. (Closes: #912182).
  * Only test with python 2, as the test code may be problematic in Py3.

 -- Thomas Goirand <zigo@debian.org>  Mon, 29 Oct 2018 14:31:06 +0100

python-txaio (2.8.1-1) unstable; urgency=medium

  * New upstream release.
  * Ran wrap-and-sort -bast.
  * Fixed (build-)depends versions after stretch release.
  * Updating maintainer.
  * Standards-Version is now 4.1.1.
  * Updated VCS fields.
  * Updated d/copyright format url (https).
  * Remove gbp.conf.
